tests/snapshots/test_runner__tests__compiler__typecheck__explicit_type_variable_7.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
type Tuple<Left> = {left: Left}

type Foo = Tuple<Foo Integer>

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
  ┌─ tests/compiler/typecheck/explicit_type_variable_7.kk:3:17
  │
3 │ type Foo = Tuple<Foo Integer>
  │                 ^^^^^^^^^^^^^ Type arguments length mismatch
  │
  = 2 type arguments are given, but expected 1:
      Left
